--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Caveat" />
   <link rel="shortcut icon" type="image/png" href="/favicon.ico">
 
   <script
