--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -14,17 +14,16 @@
               <section id="icons-container" >
                 <div id="jumbotron-wrapper">
                   <div id="center">
-                    <!--h1>A complete collection of my works.</h1>
-                    <p>Everything for you, 100% free.</p>
-                    <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Coming Soon</a-->
 
-                      <h1>Ayo Ayco is a software engineer from the Philippines. <a href="#"></a></h1>
+                      <h1 class="main-heading">
+                        <span class="main-heading-name">Ayo Ayco</span> is a <br />software engineer
+                        <br />from The Philippines
+                      </h1>
+                      <h2 class="main-sub-heading pen-marker">now in The Netherlands!</h2>
+
                       <a href="https://drive.google.com/file/d/1MhN8qWRJnSHM_epU9GFQL9lEsMFtHWQK/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
       
                   </div>
-                  <!--div id="right">
-                    <a href="https://blog.ayco.io" target="_blank" id="blog-link"></a>
-                  </div-->
                 </div>
               </section>
               <div id="alon-div"></div>
