add padding on page-content

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -161,6 +161,7 @@ div#sub-sections * {
     -moz-border-radius: 10px;
     border-radius: 10px;
     font-size: 16px;
+    padding: 30px 0 100px;
 }
 
 .primary-btn,
