--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -29,6 +29,7 @@ section#icons-container {
 
         h2.main-sub-heading {
             font-size: 50px;
+            color: #ffdf8a;
         }
 
         #center {
