refactor: some adjustments for responsiveness

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -19,7 +19,7 @@
                         <span class="main-heading-name">Ayo Ayco</span> is a <br />software engineer
                         <br />from The Philippines
                       </h1>
-                      <h2 class="main-sub-heading pen-marker">now in The Netherlands!</h2>
+                      <h2 class="main-sub-heading pen-marker">now in <span class="main-sub-heading-name">The Netherlands!<span></h2>
 
                       <a href="https://drive.google.com/file/d/1MhN8qWRJnSHM_epU9GFQL9lEsMFtHWQK/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
       
