refactor: some styles

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -237,7 +237,7 @@ a,
         height: 340px;
 
         #jumbotron-wrapper {
-            padding: 34px;
+            padding: 34px 0;
             width: calc(100% - 60px);
             margin: 0 auto;
 
