style: darker blue

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -14,7 +14,7 @@ em.home {
 }
 
 section#icons-container {
-    background: #0140ff; // #B309a6;
+    background: #002FB3; //#0140ff; // #B309a6;
     height: 550px;
     width: 100%;
 
@@ -61,7 +61,7 @@ section#icons-container {
 
 div#alon-div {
     background-image: url("./images/alon.svg");
-    background-color: #0140ff; // #B309a6;
+    background-color: #002FB3; // #0140ff; // #B309a6;
     height: 24px;
 }
 
