--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -43,6 +43,7 @@ published: true
               <ul>
                   <li><a href="https://www.iodigital.com/">iO</a></li>
                   <li><a href="https://www.frontmen.nl/en">Frontmen</a></li>
+                  <li><a href="https://www.priva.com/">Priva</a></li>
                   <li><a href="https://infor.com">Infor</a></li>
                   <li><a href="https://impacthub.ph/">Impact Hub Manila</a></li>
                   <li><a href="http://ajwcc.ateneo.edu/">AJWCC</a></li>
