update: clients list

--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -48,7 +48,7 @@ published: true
                   <li><a href="https://impacthub.ph/">Impact Hub Manila</a></li>
                   <li><a href="http://ajwcc.ateneo.edu/">AJWCC</a></li>
                   <li><a href="http://noah.up.edu.ph">Project NOAH</a></li>
-                  <!--li><a href="https://itc.uplb.edu.ph">UPLB-ITC</a></li-->
+                  <li><a href="https://itc.uplb.edu.ph">UPLB-ITC</a></li>
               </ul>
           </div>
           <div id="projects-section">
