announce new site

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -19,9 +19,9 @@
                         <span class="main-heading-name">Ayo Ayco</span> is a <br />software engineer
                         <br />from The Philippines
                       </h1>
-                      <h2 class="main-sub-heading pen-marker">now in <span class="main-sub-heading-name">The Netherlands!<span></h2>
+                      <h2 class="main-sub-heading pen-marker">moved to a new website!</h2>
 
-                      <a href="https://drive.google.com/file/d/1MhN8qWRJnSHM_epU9GFQL9lEsMFtHWQK/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
+                      <a href="https://ayco.io" class="primary-btn download-btn">Go to new Website</a>
       
                   </div>
                 </div>
