--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,7 +14,7 @@
             {% endif %}
             </li>
             {% if site.email %}
-            <li><a href="mailto:{{ site.email }}?Subject=From%20ayco.io" target="_top">Email me</a></li>
+            <li><a href="mailto:{{ site.email }}?Subject=From%20classic.ayco.io" target="_top">Email me</a></li>
             {% endif %}
         </ul>
       </div>
